added google SEO meta tag

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -5,6 +5,7 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="google-site-verification" content="c1AbQaVTn5_Jk4XqRZKqPCbRmjOUbQlS96SWHzkGGpU" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
         <link rel="stylesheet" href="/static/css/app.css">
         <title>Kyle Fujishige</title>
